# ergo

./: .coderabbit.yaml  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  perf.data  rust-toolchain.toml
crates/ergo-consensus/: Cargo.toml
crates/ergo-indexer/: Cargo.toml
crates/ergo-network/: Cargo.toml
crates/ergo-node/: Cargo.toml
crates/ergo-state/: Cargo.toml
crates/ergo-storage/: Cargo.toml
crates/ergo-testkit/: Cargo.toml
crates/ergo-wallet/: Cargo.toml
crates/ergo-wire/: Cargo.toml
ergo-api/: Cargo.toml
ergo-api/src/: auth.rs  blockchain.rs  emission.rs  lib.rs  mining.rs  script.rs  server.rs  traits.rs  types.rs  utils.rs  web.rs
ergo-api/tests/: auth.rs  blockchain_balance_routes.rs  blockchain_block_routes.rs  blockchain_box_range_route.rs  blockchain_box_routes.rs  blockchain_byaddress_routes.rs  blockchain_byergotree_routes.rs  blockchain_indexed_height.rs  blockchain_scala_parity.rs  blockchain_template_routes.rs  blockchain_token_routes.rs  blockchain_transaction_range_route.rs  blockchain_tx_routes.rs  blockchain_unspent_byaddress_routes.rs  blocks_at_parity.rs  blocks_header_ids_parity.rs  blocks_id_parity.rs  blocks_modifier_parity.rs  blocks_proof_for_tx_parity.rs  boundary.rs  compat_blocks_submit_route.rs  compat_submit_routes.rs  difficulty_history_route.rs  events_endpoint.rs  extra_index_router_walk.rs  host_schema.rs  identity_schema.rs  indexer_status_endpoint.rs  mempool_overlay_oracle.rs  mempool_source_schema.rs  miner_stats_route.rs  nipopow_routes_parity.rs  openapi_native_runtime_mount.rs  openapi_native_snapshot.rs  openapi_v1_snapshot.rs  recent_blocks_route.rs  router_layout.rs  scala_parity.rs  scan_routes.rs  script_address_routes.rs  (+24 more)
ergo-api/web/: components.css  dashboard.css  index.html  openapi.yaml  swagger-native.html  swagger-v1.html  swagger.html  tokens.css  wallet.css
ergo-chain-spec/: Cargo.toml
ergo-chain-spec/src/: lib.rs
ergo-compiler/: Cargo.toml
ergo-compiler/src/: ast.rs  binder.rs  contract_parse.rs  contract_template.rs  cse.rs  emit.rs  env.rs  error.rs  fold.rs  inline.rs  isproven.rs  lib.rs  lower.rs  param_order.rs  parse.rs  span.rs  stype.rs  token.rs  tree.rs  tuple.rs  typecheck.rs  typed.rs  typed_print.rs
ergo-compiler/tests/: compile_semantic_parity.rs  contract_template_parity.rs  corpus_smoke.rs  sigma_parser_spec.rs  sigma_typer_spec.rs  typer_oracle_parity.rs
ergo-crypto/: Cargo.toml
ergo-crypto/src/: difficulty.rs  group_element.rs  lib.rs  pow.rs
ergo-crypto/tests/: difficulty_mainnet.rs  merkle_mainnet.rs  merkle_proof_for_tx_oracle.rs  pow_mainnet.rs
ergo-difftest/: .gitignore  Cargo.toml  README.md  replay-pins.json
ergo-difftest/docs/: findings-and-triage.md  interface-contracts.md  known-bug-catalog.md
ergo-difftest/fuzz/: .gitignore  Cargo.toml  README.md
ergo-difftest/known_bugs/: manifest.toml
ergo-difftest/src/: avl_frame.rs  fuzz.rs  generate.rs  lib.rs  methodcall.rs  minimize.rs  oracle.rs  regressions.rs  rng.rs  surfaces.rs
ergo-difftest/tests/: gen_coverage.rs  minimize.rs  selftest.rs  smoke.rs
ergo-indexer/: Cargo.toml
ergo-indexer-types/: Cargo.toml
ergo-indexer-types/src/: lib.rs  protocol_genesis.rs  query.rs  status.rs  types.rs
ergo-indexer/src/: address.rs  apply.rs  config.rs  error.rs  handle.rs  lib.rs  rebuild.rs  rollback.rs  scratch.rs  segment.rs  segment_buffer.rs  segment_id.rs  task.rs  template.rs  token.rs
ergo-indexer/tests/: apply_block.rs  backfill_corpus.rs  error_taxonomy.rs  handle_boot.rs  handle_query.rs  rebuild.rs  reorg_depth.rs  reorg_spill.rs  reorg_token.rs  resume_contract.rs  rollback.rs  storage_rent_apply.rs  store_open.rs  task_step.rs  template_index.rs  token_index.rs
ergo-mempool/: Cargo.toml
ergo-mempool/src/: admission.rs  budget.rs  invalidation.rs  lib.rs  mempool.rs  overlay.rs  pool.rs  reorg.rs  revalidation.rs  snapshot.rs  staging.rs  telemetry.rs  types.rs  unresolved.rs  validator.rs  weight.rs
ergo-mempool/tests/: admit_span.rs  m7_fee_discovery.rs  m7_mainnet_corpus.rs  m7_ordering_oracle.rs  m7_pending_tx_cost.rs  m7_scala_oracle.rs  mempool_lifecycle.rs  observer.rs
ergo-mining/: Cargo.toml
ergo-mining/src/: candidate.rs  candidate_selection.rs  coinbase.rs  config.rs  emission_box.rs  emission_rules.rs  engine.rs  error.rs  extension_builder.rs  genesis.rs  handle.rs  lib.rs  reemission.rs  reward_script.rs  solution.rs  state_view.rs  storage_rent_claim.rs  submit.rs  tx_selection.rs  work_message.rs
ergo-mining/tests/: chain_spec_parity.rs  engine_published_parity.rs  genesis_candidate.rs  storage_rent_reemission_oracle.rs
ergo-node/: Cargo.toml  ergo-node-capture-index.toml  ergo-node-capture-noindex.toml  ergo-node.toml  ergo-node.toml.example
ergo-node/examples/: ge_soak.rs  p2p_probe.rs
ergo-node/src/: anchor_map.rs  anchor_scheduler.rs  api_bridge.rs  genesis.rs  indexer_chain.rs  lib.rs  main.rs  mem_csv.rs  mem_maps.rs  mem_marker.rs  mem_probe.rs  mem_sampler.rs  mem_smaps.rs  mining_bridge.rs  notifier.rs  peer_loop.rs  realtime_mempool_bridge.rs  snapshot.rs  wallet_boot.rs
ergo-node/tests/: genesis_mining_roundtrip.rs  identity_live_refresh.rs  mining_e2e.rs  mode4_acceptance.rs  mode4_boot_refusal.rs  mode_runtime_gate.rs  submit_e2e.rs  wallet_admin_roundtrip.rs  wallet_e2e_helpers.rs  wallet_restart_parity.rs  wallet_send_e2e.rs
ergo-p2p/: Cargo.toml
ergo-p2p/src/: assembly.rs  connection.rs  delivery.rs  framing.rs  handshake.rs  lib.rs  message.rs  partition.rs  peer.rs  sync.rs  throttle.rs  types.rs
ergo-p2p/tests/: address_book_persist.rs  structured_error_propagation.rs  wire_tcp_pair.rs  wire_vectors_oracle.rs
ergo-primitives/: Cargo.toml
ergo-primitives/src/: cost.rs  digest.rs  group_element.rs  (+5 more)
ergo-rest-json/: Cargo.toml
ergo-ser/: Cargo.toml
ergo-sigma/: Cargo.toml
ergo-state/: Cargo.toml
ergo-sync/: Cargo.toml
ergo-validation/: Cargo.toml
ergo-wallet/: Cargo.toml
(+1448 files in other folders)
