[package]
name        = "ergo-api"
description = "Operator-facing read-mostly HTTP API for the Ergo Rust node. Hosts the axum router that serves the Scala-compatible surface (`/info`, `/blocks/*`, `/transactions*`, `/utxo/*`, `/peers/*`, `/blockchain/*`, `/mining/*`, `/wallet/*`) plus the node-native `/api/v1/*` dashboard, including mutating routes (transaction + block submission, `/node/shutdown`, and wallet lifecycle/sending). Traits-only contract: the node implements the reader / submit / admin / chain-query traits against its runtime state and hands them in as trait objects — no concrete-type coupling."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish    = false

[dependencies]
axum               = { workspace = true, features = ["ws"] }
tower-http         = { workspace = true, features = ["trace"] }
tokio              = { workspace = true, features = ["rt", "macros", "net", "sync"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
hex                = { workspace = true }
blake2             = { workspace = true }
subtle             = { workspace = true }
hmac               = { workspace = true }
sha2               = { workspace = true }
async-trait        = { workspace = true }
tracing            = { workspace = true }
utoipa             = { workspace = true }
ergo-indexer-types = { workspace = true }
ergo-ser           = { workspace = true }
ergo-primitives    = { workspace = true }
ergo-rest-json     = { workspace = true }
# The `/api/v1/script/*` playground: the consensus-exact interpreter
# (`ergo-sigma` reduce/cost path) and the byte-parity compiler
# (`ergo-compiler::compile`) — the node-only surfaces this group adapts.
ergo-sigma         = { workspace = true }
ergo-compiler      = { workspace = true }
thiserror          = { workspace = true }
rand               = { workspace = true }
base64             = { workspace = true }
# The v1 webhooks production delivery sink (`v1/webhooks/worker.rs`). rustls
# ONLY — `default-features = false` is load-bearing: reqwest's defaults pull
# `native-tls`/system OpenSSL, which this consensus node must never depend on
# (CLAUDE.md §2, crypto: proven crates only). Only the features actually used
# are enabled; the signed body is already a `String`, so `json` is not needed.
reqwest            = { workspace = true, features = ["rustls-tls"] }
# `POST /api/v1/batch` (§3.18/§4.7) dispatches each sub-request in-process
# against a restricted `Router` via `tower::util::ServiceExt::oneshot` — the
# established "never HTTP-to-itself" idiom for a router-internal multiplex.
tower              = { workspace = true, features = ["util"] }

[dev-dependencies]
http-body-util  = { workspace = true }
bs58            = { workspace = true }
# WS transport integration test for `/api/v1/ws`: a real client over a real
# upgrade (the axum `ws` feature already pulls tokio-tungstenite 0.24 into the
# lock; these are dev-only so the production build is untouched).
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
tokio             = { workspace = true, features = ["rt", "macros", "net", "sync", "rt-multi-thread"] }
# Tests need IndexerHandle to fixture the trait surface — kept dev-only
# so the production build of ergo-api never pulls in redb or ergo-state.
ergo-indexer    = { workspace = true }
# Differential parity tests need scratch DBs to backfill mainnet block
# bytes through the indexer apply path before replaying captured Scala
# responses through the router.
tempfile        = { workspace = true }
