[package]
name        = "ergo-compiler"
description = "ErgoScript → ErgoTree compiler. M1+M2: lexer + parser + binder + typer, production-faithful to the Scala reference (sigmastate.lang.SigmaCompiler, sigma-state 6.0.2). Later milestones add lowering and byte-identical ErgoTree emission."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish    = false

[dependencies]
thiserror        = { workspace = true }
ergo-ser         = { workspace = true }
ergo-primitives  = { workspace = true }
ergo-crypto      = { workspace = true }
bs58             = { workspace = true }
base64           = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
hex        = { workspace = true }
