[package]
name        = "ergo-difftest"
description = "Differential / invariant fuzzing harness for Ergo wire-format decoders. Generates and mutates bytes, runs them through the consensus decoders, and checks oracle-free invariants (no-panic, parse/serialize fixed point). The JVM-oracle differential layer (scripts/jvm_serde_oracle) is layered on top for accept/reject parity."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish    = false
# `difftest` is the primary campaign runner; `replay` is the streamed archival
# driver. Keep `cargo run -p ergo-difftest` pointing at difftest so the README /
# doc invocations (`cargo run -p ergo-difftest -- ...`) keep working now that a
# second binary exists.
default-run = "difftest"

[dependencies]
ergo-primitives = { workspace = true }
ergo-ser        = { workspace = true }
ergo-sigma      = { workspace = true }
ergo-state      = { workspace = true }
ergo-validation = { workspace = true }
ergo-rest-json  = { workspace = true }
num-bigint      = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
serde_json      = { workspace = true }
hex             = { workspace = true }
tempfile        = { workspace = true }
sha2            = { workspace = true }

[[bin]]
name = "difftest"
path = "src/bin/difftest.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"
