[package]
name        = "ergo-node"
description = "Operator binary and runtime crate for the Ergo Rust full node. Wires the workspace's component crates (state, p2p, sync, mempool, indexer, API) into a single async runtime, owns process-level lifecycle (config, data-dir layout, graceful shutdown, peer loop, submission action loop), and exposes the API trait surface to ergo-api over an Arc<NodeSnapshot>."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish    = false

[lib]
name = "ergo_node"
path = "src/lib.rs"

[[bin]]
name = "ergo-node"
path = "src/main.rs"

[dependencies]
ergo-primitives = { workspace = true }
ergo-ser        = { workspace = true }
ergo-chain-spec = { workspace = true }
ergo-crypto     = { workspace = true }
ergo-validation = { workspace = true }
ergo-wallet     = { workspace = true }
ergo-state      = { workspace = true }
ergo-p2p        = { workspace = true }
ergo-sync       = { workspace = true }
ergo-mempool    = { workspace = true }
ergo-mining     = { workspace = true }
ergo-indexer    = { workspace = true }
ergo-api        = { workspace = true }
ergo-rest-json  = { workspace = true }
redb            = { workspace = true, features = ["logging"] }
bincode         = { workspace = true }
arc-swap        = { workspace = true }
parking_lot     = { workspace = true }
clap            = { workspace = true, features = ["derive"] }
hex             = { workspace = true }
indexmap        = { workspace = true }
num-bigint      = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true, features = ["arbitrary_precision"] } # v1 d = arbitrary-precision JSON number (api_bridge::compat relies on this; do not remove)
tokio           = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
toml            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
async-trait        = { workspace = true }
# Shadow-validation reference client (loopback/LAN Scala node). Same
# rustls-only dependency policy as the ergo-api webhook sink.
reqwest            = { workspace = true, features = ["rustls-tls", "json"] }
thiserror          = { workspace = true }
sysinfo            = { workspace = true }
k256               = { workspace = true }
zeroize            = { workspace = true }
ergo-sigma         = { workspace = true }

[features]
# Build a DEVNET-ONLY node binary that does REAL RISC0 verifyStark (0xB9)
# verification instead of the M1 stub. Forwards into the sigma evaluator via
# ergo-validation (which drives block + mempool script validation); cargo feature
# unification means the whole node then links one ergo-sigma built with real
# verify. Pulls the risc0-verifier git dep. NEVER enable on a mainnet-following
# build — 0xB9 is not a mainnet opcode and this build diverges by design (see the
# 0xB9 arm of `opcode_pattern` in ergo-ser opcode/types.rs).
stark-verify = ["ergo-validation/stark-verify", "ergo-sigma/stark-verify"]

[dev-dependencies]
tempfile           = { workspace = true }
ergo-api           = { workspace = true }
ergo-mempool       = { workspace = true, features = ["test-support"] }
ergo-p2p           = { workspace = true }
ergo-primitives    = { workspace = true }
ergo-state         = { workspace = true, features = ["test-helpers"] }
arc-swap           = { workspace = true }
tracing-subscriber = { workspace = true }
