[package]
name        = "ergo-primitives"
description = "Foundational primitives for the Ergo Rust node: Blake2b digests, secp256k1 group elements, Scorex VLQ/zigzag readers and writers, and the JitCost accumulator."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish    = false

[dependencies]
blake2    = { workspace = true }
hex       = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
