[package]
name        = "ergo-sigma"
description = "Sigma-protocol verifier and ErgoTree evaluator for the Ergo Rust node: AST-walking interpreter, JIT cost accounting, AVL+ proof verification (via ergo_avltree_rust), Schnorr/DHTuple/CAND/COR/Cthreshold verification, and the spending-proof entry points used by mempool admission and block validation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish    = false

[dependencies]
ergo-primitives   = { workspace = true }
ergo-ser          = { workspace = true }
ergo-crypto       = { workspace = true }
sha2              = { workspace = true }
k256              = { workspace = true, features = ["arithmetic"] }
num-bigint        = { workspace = true }
num-integer       = { workspace = true }
num-traits        = { workspace = true }
gf2_192           = { workspace = true }
indexmap          = { workspace = true }
thiserror         = { workspace = true }
ergo_avltree_rust = { workspace = true }
bytes             = { workspace = true }
# DEVNET-ONLY (EIP-0045 verifyStark spike). Behind the `stark-verify` feature so
# the default / mainnet-following node build never pulls this heavy git dep and
# keeps the M1 stub. See opcodes/sigma.rs `eval_verify_stark`.
risc0-verifier    = { git = "https://github.com/zkVerify/risc0-verifier", tag = "v0.11.0", optional = true }
bincode           = { version = "1.3", optional = true }

[features]
# Real RISC0 STARK verification for the devnet-only verifyStark (0xB9) opcode.
# OFF by default: eval_verify_stark uses the M1 stub and no risc0 dep is pulled.
stark-verify = ["dep:risc0-verifier", "dep:bincode"]
# Per-evaluator-step JIT-cost trace. Adds a thread-local recorder behind the
# `cost_trace` module that emits human-readable cost breakdowns to stderr —
# useful for diagnosing cost-divergence bugs against the Scala oracle. No
# runtime overhead when the feature is off.
cost-trace = []

[dev-dependencies]
hex        = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
